# gdrive-mcp

./: .gitignore  Incept_docs.md  PRD.md  README.md  TODO.md  cursor-tools.js  example_server.py  gdoc.bat  gdoc.py  pyproject.toml  save_gdoc.py  test_auth.py  test_import.py  test_mcp_tool.py
config/: default.json
src/gdocs_mcp/: __init__.py  __main__.py  auth.py  drive.py  server.py
src/gdocs_mcp/tools/: __init__.py
